# sdkwork-portal

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
apis/app-api/portal/: portal-app-api.openapi.json
apis/backend-api/portal/: portal-backend-api.openapi.json
apps/: README.md
apps/sdkwork-portal-common/: README.md
apps/sdkwork-portal-pc/: index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-portal-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-portal-pc/docs/architecture/tech/: TECH_ARCHITECTURE.md
apps/sdkwork-portal-pc/docs/product/prd/: PRD.md
apps/sdkwork-portal-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-portal-pc/specs/: dependency.composition.json
apps/sdkwork-portal-pc/src/: main.tsx  styles.css
configs/: sdkwork-api-cloud-gateway.portal-pc.development.toml  sdkwork-api-cloud-gateway.portal-pc.production.toml  sdkwork-api-cloud-gateway.portal.development.toml  sdkwork-api-cloud-gateway.portal.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  cloud.unified-process.development.env  cloud.unified-process.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.split-services.production.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/sdkwork-api-portal-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-portal-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-portal-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-portal-standalone-gateway/: Cargo.toml
crates/sdkwork-api-portal-standalone-gateway/src/: main.rs
crates/sdkwork-platform-portal-repository-sqlx/: Cargo.toml
crates/sdkwork-platform-portal-repository-sqlx/src/: lib.rs
crates/sdkwork-platform-portal-service/: Cargo.toml
crates/sdkwork-platform-portal-service/src/: domain.rs  lib.rs  ports.rs  service.rs
crates/sdkwork-portal-api-server/: Cargo.toml
crates/sdkwork-portal-api-server/src/: lib.rs  main.rs
crates/sdkwork-portal-database-host/: Cargo.toml
crates/sdkwork-portal-database-host/src/: lib.rs
crates/sdkwork-portal-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-portal-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-portal-service-host/: Cargo.toml
crates/sdkwork-portal-service-host/src/: lib.rs
crates/sdkwork-portal-standalone-gateway/: Cargo.toml
crates/sdkwork-portal-standalone-gateway/src/: main.rs
crates/sdkwork-router-portal-app-api/: Cargo.toml
crates/sdkwork-router-portal-app-api/src/: http_route_manifest.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-router-portal-backend-api/: Cargo.toml
crates/sdkwork-router-portal-backend-api/src/: handlers.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-portal-app-api/: Cargo.toml
crates/sdkwork-routes-portal-app-api/specs/: component.spec.json
crates/sdkwork-routes-portal-app-api/src/: handlers.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-portal-backend-api/: Cargo.toml
crates/sdkwork-routes-portal-backend-api/specs/: component.spec.json
crates/sdkwork-routes-portal-backend-api/src/: handlers.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-routes-portal-common/: Cargo.toml
crates/sdkwork-routes-portal-common/src/: envelope.rs  lib.rs  response.rs
crates/sdkwork-routes-portal-common/tests/: response_envelope.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/sqlite/: 0001_portal_baseline.sql
database/drift/: policy.yaml
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql
deployments/: deploy.yaml
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
etc/: sdkwork-api-cloud-gateway.portal.development.toml  sdkwork-api-cloud-gateway.portal.production.toml
sdks/_route-manifests/app-api/: sdkwork-routes-portal-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-routes-portal-backend-api.route-manifest.json
sdks/sdkwork-portal-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-portal-app-sdk/openapi/: sdkwork-portal-app-api.openapi.json
sdks/sdkwork-portal-app-sdk/sdkwork-portal-app-sdk-typescript/: package.json
sdks/sdkwork-portal-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-portal-backend-sdk/openapi/: sdkwork-portal-backend-api.sdkgen.json
sdks/sdkwork-portal-backend-sdk/sdkwork-portal-backend-sdk-typescript/: package.json
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/contract/: database-framework.contract.test.mjs
tests/static/: portal-architecture.test.mjs
tools/: portal_openapi_export.mjs  portal_route_manifest_export.mjs  portal_sdk_generate.mjs  scaffold_portal_workspace.mjs
