[workspace]
resolver = "2"
members = [
  "crates/sdkwork-platform-portal-service",
  "crates/sdkwork-platform-portal-repository-sqlx",
  "crates/sdkwork-router-portal-app-api",
  "crates/sdkwork-router-portal-backend-api",
  "crates/sdkwork-portal-database-host",
  "crates/sdkwork-portal-service-host",
  "crates/sdkwork-portal-api-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-ops-http = { path = "../sdkwork-database/crates/sdkwork-database-ops-http" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_platform_portal_service = { path = "crates/sdkwork-platform-portal-service", package = "sdkwork-platform-portal-service" }
sdkwork_platform_portal_repository_sqlx = { path = "crates/sdkwork-platform-portal-repository-sqlx", package = "sdkwork-platform-portal-repository-sqlx" }
sdkwork_router_portal_app_api = { path = "crates/sdkwork-router-portal-app-api", package = "sdkwork-router-portal-app-api" }
sdkwork_router_portal_backend_api = { path = "crates/sdkwork-router-portal-backend-api", package = "sdkwork-router-portal-backend-api" }
sdkwork_portal_database_host = { path = "crates/sdkwork-portal-database-host", package = "sdkwork-portal-database-host" }
sdkwork_portal_service_host = { path = "crates/sdkwork-portal-service-host", package = "sdkwork-portal-service-host" }
