[package]
name = "sdkwork-api-portal-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true


[[bin]]
name = "portal-server"
path = "src/main.rs"

[dependencies]
sdkwork_api_portal_assembly = { package = "sdkwork-api-portal-assembly", path = "../sdkwork-api-portal-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork_portal_service_host.workspace = true
