[package]
name = "sdkwork-platform-portal-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
sdkwork_platform_portal_service.workspace = true
sdkwork_database_sqlx.workspace = true
