[package]
name = "sdkwork-portal-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "portal-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sdkwork_router_portal_app_api.workspace = true
sdkwork_router_portal_backend_api.workspace = true
sdkwork_portal_service_host.workspace = true
