[package]
name = "sdkwork-portal-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-portal application HTTP plane."

[lib]
name = "sdkwork_portal_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_portal_app_api = { package = "sdkwork-routes-portal-app-api", path = "../sdkwork-routes-portal-app-api" }
sdkwork_routes_portal_backend_api = { package = "sdkwork-routes-portal-backend-api", path = "../sdkwork-routes-portal-backend-api" }
