[package]
name = "sdkwork-portal-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_platform_portal_repository_sqlx.workspace = true
sdkwork_platform_portal_service.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork_database_spi.workspace = true
sdkwork_portal_database_host.workspace = true
