[package]
name = "sdkwork-routes-portal-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
sdkwork-utils-rust = { path = "../../../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-web-core.workspace = true

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
sdkwork-web-core.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
